--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-clipboard/clipboard": "^1.8.5",
@@ -21,6 +22,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "@types/react-native-calendar-picker": "^7.0.2",
     "formik": "^2.2.9",
+    "graphql": "^16.5.0",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.1",
